objects/LBI__LatticeAcctExtFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Acct Ext Field Mappings</relationshipLabel>
        <relationshipName>LatticeAcctExtFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__SourceField__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TargetField__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Acct Ext Field Mapping</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__SourceField__c</columns>
        <columns>LBI__TargetObject__c</columns>
        <columns>LBI__TargetField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEFM-{0000000000}</displayFormat>
        <label>Account Extension Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Acct Ext Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>